# tenxyte

./: .coveragerc  .gitignore  .gitleaks.toml  .gitleaksignore  .readthedocs.yaml  ACCOMPLISSEMENTS.md  AIRS_IMPLEMENTATION.md  ANALYSE_BY_OPUS_1.md  CANONICAL_SPEC_VALIDATION_REPORT.md  CHANGELOG.md  COMPLETING_MISSINGS0.md  CORRECTION_FINALE.md  DATABASE_SETUP.md  DESIGN_SPEC.json  DEVICE_INFO.md  ENDPOINTS_VALIDATION_REPORT.md  END_TO_END.md  INSTALL_TEST.md  LEGACY_ELIMINATION_PLAN.md  LEGACY_MIGRATION_COMPLETE.md  LICENSE  MANIFEST.in  MIGRATION_STATUS.md  MIGRATION_TESTS_SUMMARY.md  P1_TEST_REPORT.md  PKG-INFO  PLANS_BUILDING0.md  PLAN_EVOLUTION0.md  PLAN_ORGANIZATIONS_IMPL.md  PROJECT_TEST.md  README.fr.md  README.md  ROADMAP.md  TESTS_MIGRATION_REQUIRED.md  TESTS_PROCESSED.md  TESTS_REWRITE_SUMMARY.md  TESTS_STATUS_FINAL.md  TEST_AUTH_SERVICE_EXTENDED_RESULTS.md  TEST_COVERAGE_PLAN.md  TOTP_WARNING_SOLUTION_COMPLETE.md  (+93 more)
.audits/v1/Architecture & Infrastructure/: AUDIT_Tenxyte_v0.9.1.7.md  implementation_adds.md  infos.md  tests_logs1.md
.audits/v1/Conformité & Privacy/: AUDIT_Conformite_Privacy_Tenxyte_v0.9.1.7.md  DPA_OBLIGATIONS.md  implementation_adds.md  infos.md
.audits/v1/Cryptographie/: audit1.md  implementation_adds.md  infos.md
.audits/v1/Déploiement & opérations/: audit.md  implementation_adds.md  infos.md
.audits/v1/Qualité du code & surface d'attaque/: audit.md  (+3 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  security.yml  validate-docs.yml
docs/: CONTRIBUTING.md  MIGRATION_GUIDE.md  README.md  TESTING.md  airs.md  architecture.md  custom_adapters.md  deep-research-report-chat.md  endpoints.md  endpoints_updated.md  geminireport.txt  organizations.md  periodic_tasks.md  periodic_tasks.py  quickstart.md  rapport-securite-authentification-unifie.md  rbac.md  schemas.md  security.md  settings.md  troubleshooting.md
docs/en/: CONTRIBUTING.md  MIGRATION_GUIDE.md  README.md  TESTING.md  admin.md  airs.md  applications.md  architecture.md  async_guide.md  custom_adapters.md  endpoints.md  fastapi_quickstart.md  index.md  quickstart.md  rbac.md  requirements.txt  schemas.md  security.md  settings.md
docs/fr/: CONTRIBUTING.md  MIGRATION_GUIDE.md  README.md  TESTING.md  admin.md  airs.md  applications.md  architecture.md  async_guide.md  custom_adapters.md  endpoints.md  fastapi_quickstart.md  index.md  organizations.md  periodic_tasks.md  quickstart.md  rbac.md  requirements.txt  schemas.md  security.md  settings.md  task_service.md  troubleshooting.md
docs/runbooks/: deployment.md  incident_response.md  rollback.md
docs_site/: api-reference.html  authentication.html  examples.html  index.html  migration.html  script.js  search.json  styles.css
examples/deployment/: Dockerfile  docker-compose.yml
scripts/: README.md  fix_openapi_examples.py  generate_docs_site.py  generate_openapi_schema.py  generate_postman_collection.py  k6_load_test.js  optimize_schemas.py  recreate_migrations.py  run_django_tests.py  validate_canonical_spec.py  validate_documentation.py  validate_endpoints.py  validate_openapi_spec.py
site/: 404.html  index.html  requirements.txt  sitemap.xml
site/CONTRIBUTING/: index.html
site/MIGRATION_GUIDE/: index.html
site/TESTING/: index.html
site/admin/: index.html
site/airs/: index.html
site/applications/: index.html
site/endpoints/: index.html
site/organizations/: index.html
site/periodic_tasks/: index.html
site/quickstart/: index.html
site/rbac/: index.html
site/schemas/: index.html
site/search/: search_index.json
site/security/: index.html
site/settings/: index.html
site/troubleshooting/: index.html
src/tenxyte/: __init__.py  admin.py  apps.py  authentication.py  conf.py  decorators.py  device_info.py  exceptions.py  filters.py  middleware.py  models.py  pagination.py  serializers.py  signals.py  tenant_context.py  throttles.py  urls.py  validators.py
tests/: REGRESSION_REPORT_TEMPLATE.md  __init__.py  conftest.py  settings.py  test_backends.py  test_canonical_spec.py  test_dashboard.py  test_documentation_examples.py  test_filters.py  test_jwt.py  test_models.py  test_otp.py  test_security_views.py  test_totp.py  test_user_admin.py  test_validators.py  test_views.py  urls.py
tests/core/: conftest.py  test_async_cache_service.py  test_async_jwt_service.py  test_async_magic_link_service.py  test_async_session_service.py  test_async_task_email.py  test_async_totp_service.py  test_core_cache_service.py  test_core_email_service.py  test_core_env_provider.py  test_core_jwt_service.py  test_core_magic_link_service.py  test_core_middleware.py  test_core_settings.py  test_jwt_service.py  test_magic_link_service.py  test_session_service.py  test_timing_attack_mitigation.py  test_totp_service.py  test_webauthn_service.py
tests/integration/: test_asgi.py  test_hitl_workflow.py  test_tenant_isolation.py  test_views.py
tests/multidb/: conftest.py  settings_base.py  settings_mongodb.py  settings_mysql.py  test_db_auth_flow.py  test_db_models.py
tests/security/: test_idor_mass_assignment.py  test_race_conditions.py  test_security.py
tests/unit/: test_account_deletion.py  test_agent_decorators.py  test_agent_forensic_audit.py  test_agent_middleware.py  test_agent_service.py  test_agent_tasks.py  test_agent_views.py  test_application_views.py  test_apps.py  test_auth_serializers.py  test_auth_service_coverage.py  test_auth_service_edge_cases.py  test_auth_service_extended.py  test_auth_views.py  test_auto_dev_preset.py  test_backends.py  test_cors_middleware.py  test_decorators.py  test_email_service.py  test_filters.py  test_gdpr_admin_serializers.py  test_gdpr_admin_views.py  test_google_auth_service.py  test_init.py  test_jwt.py  test_lazy_loading.py  test_magic_link.py  test_management_commands.py  test_middleware.py  test_models.py  test_models_gdpr.py  test_models_organization.py  test_models_security.py  test_organization_service.py  test_organization_views.py  test_otp.py  test_password_serializers.py  test_purge_audit_logs.py  test_quickstart_command.py  test_rbac_views.py  (+14 more)
(+295 files in other folders)
