[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenxyte"
version = "0.9.2.5"
description = "Framework-agnostic Python authentication — JWT, RBAC, 2FA, Magic Links, Passkeys, Social Login, B2B Organizations, multi-tenant support. Works with Django, FastAPI, and more."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Tenxyte Team", email = "contact@tenxyte.com" }
]
keywords = [
    "authentication",
    "jwt",
    "2fa",
    "totp",
    "rbac",
    "otp",
    "google-authenticator",
    "role-based-access-control",
    "organizations",
    "multi-tenant",
    "b2b",
    "magic-link",
    "passkeys",
    "webauthn",
    "fido2",
    "social-login",
    "oauth2",
    "django",
    "fastapi",
    "framework-agnostic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: FastAPI",
]

# Default dependencies include Django stack for backward compatibility
# Install with [core] for minimal dependencies
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14",
    "django-cors-headers>=4.0",
    "drf-spectacular>=0.27",
    "PyJWT>=2.8",
    "bcrypt>=4.0",
    "pyotp>=2.9",
    "qrcode[pil]>=8.0",
    "google-auth>=2.20",
    "google-auth-oauthlib>=1.0",
    "django-cryptography>=1.1",
    "Pillow>=10.3.0",
    "requests>=2.31.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# ===== ADAPTER EXTRAS =====
# Core-only (minimal dependencies, no framework)
# Use for custom integrations or when you bring your own framework
core = [
    "PyJWT>=2.8",
    "bcrypt>=4.0",
    "pyotp>=2.9",
    "qrcode[pil]>=8.0",
    "Pillow>=10.3.0",
    "requests>=2.31.0",
    "pydantic>=2.0",
]

# Django stack (adds Django-specific dependencies)
# Included by default for backward compatibility
django = [
    "django>=5.0",
    "djangorestframework>=3.14",
    "django-cors-headers>=4.0",
    "drf-spectacular>=0.27",
    "django-cryptography>=1.1",
    "google-auth>=2.20",
    "google-auth-oauthlib>=1.0",
]

# FastAPI stack
fastapi = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "python-multipart>=0.0.6",
    "pydantic>=2.0",
]

# ===== DATABASE ADAPTERS =====
postgres = [
    "psycopg2-binary>=2.9",
]

mysql = [
    "mysqlclient>=2.2",
]

mongodb = [
    "django-mongodb-backend>=5.0",
]

# ===== FEATURE-SPECIFIC EXTRAS =====
# SMS support via Twilio
twilio = [
    "twilio>=9.0",
]

# Email support via SendGrid
sendgrid = [
    "sendgrid>=6.10",
]

# WebAuthn/FIDO2 support
webauthn = [
    "webauthn>=2.0.0",
]

# ===== META EXTRAS =====
# All features (backward compatible - includes Django stack)
all = [
    "twilio>=9.0",
    "sendgrid>=6.10",
    "django-mongodb-backend>=5.0",
    "psycopg2-binary>=2.9",
    "mysqlclient>=2.2",
    "webauthn>=2.0.0",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/tenxyte/tenxyte"
Documentation = "https://tenxyte.readthedocs.io"
Repository = "https://github.com/tenxyte/tenxyte"
Issues = "https://github.com/tenxyte/tenxyte/issues"
Changelog = "https://github.com/tenxyte/tenxyte/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tenxyte"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=tenxyte --cov-report=html --cov-report=term --cov-fail-under=90 --reuse-db --create-db"  # R13 — seuil aligné sur la réalité (98% actuel)

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py310"
