[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tenxyte"
version = "0.9.3"
description = "Framework-agnostic Python authentication — JWT, RBAC, 2FA, Magic Links, Passkeys, Social Login, B2B Organizations, multi-tenant support. Works with Django, FastAPI, and more."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Tenxyte Team", email = "contact@tenxyte.com" }
]
keywords = [
    "authentication",
    "jwt",
    "2fa",
    "totp",
    "rbac",
    "otp",
    "google-authenticator",
    "role-based-access-control",
    "organizations",
    "multi-tenant",
    "b2b",
    "magic-link",
    "passkeys",
    "webauthn",
    "fido2",
    "social-login",
    "oauth2",
    "django",
    "fastapi",
    "framework-agnostic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: FastAPI",
]

# Default dependencies include Django stack for backward compatibility
# Install with [core] for minimal dependencies
dependencies = [
    "django>=6.0",
    "djangorestframework>=3.16",
    "django-cors-headers>=4.9",
    "drf-spectacular>=0.28",
    "PyJWT>=2.12.0",
    "bcrypt>=4.2",
    "pyotp>=2.9",
    "qrcode[pil]>=8.0",
    "google-auth>=2.49",
    "google-auth-oauthlib>=1.2",
    "django-cryptography>=1.1",
    "Pillow>=11.0",
    "requests>=2.32",
    "pydantic>=2.12",
]

[project.optional-dependencies]
# ===== ADAPTER EXTRAS =====
# Core-only (minimal dependencies, no framework)
# Use for custom integrations or when you bring your own framework
core = [
    "PyJWT>=2.12.0",
    "bcrypt>=4.2",
    "pyotp>=2.9",
    "qrcode[pil]>=8.0",
    "Pillow>=11.0",
    "requests>=2.32",
    "pydantic>=2.12",
]

# Django stack (adds Django-specific dependencies)
# Included by default for backward compatibility
django = [
    "django>=6.0",
    "djangorestframework>=3.16",
    "django-cors-headers>=4.9",
    "drf-spectacular>=0.28",
    "django-cryptography>=1.1",
    "google-auth>=2.49",
    "google-auth-oauthlib>=1.2",
]

# FastAPI stack
fastapi = [
    "fastapi>=0.135",
    "uvicorn>=0.40",
    "sqlalchemy>=2.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.12",
]

# ===== DATABASE ADAPTERS =====
postgres = [
    "psycopg2-binary>=2.9",
]

mysql = [
    "mysqlclient>=2.2",
]

mongodb = [
    "django-mongodb-backend>=5.0",
]

# ===== FEATURE-SPECIFIC EXTRAS =====
# SMS support via Twilio
twilio = [
    "twilio>=9.5",
]

# Email support via SendGrid
sendgrid = [
    "sendgrid>=6.12",
]

# WebAuthn/FIDO2 support
webauthn = [
    "webauthn>=2.7.0",
]

# ===== META EXTRAS =====
# All features (backward compatible - includes Django stack)
all = [
    "twilio>=9.0",
    "sendgrid>=6.10",
    "django-mongodb-backend>=5.0",
    "psycopg2-binary>=2.9",
    "mysqlclient>=2.2",
    "webauthn>=2.0.0",
]

# Development dependencies
dev = [
    "pytest>=8.0",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "black>=25.0",
    "ruff>=0.9",
    "mypy>=1.15",
]

[project.urls]
Homepage = "https://github.com/tenxyte/tenxyte"
Documentation = "https://tenxyte.readthedocs.io"
Repository = "https://github.com/tenxyte/tenxyte"
Issues = "https://github.com/tenxyte/tenxyte/issues"
Changelog = "https://github.com/tenxyte/tenxyte/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/tenxyte"]

[tool.pytest.ini_options]
# Core tests (pure unit tests, no Django)
# Run with: pytest tests/core/ -p no:django
# Django tests (integration tests with Django ORM)
# Run with: pytest tests/integration/django/
DJANGO_SETTINGS_MODULE = "tests.integration.django.settings"
pythonpath = [".", "src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=tenxyte --cov-report=html --cov-report=term --cov-fail-under=90 --reuse-db --create-db"
markers = [
    "no_django: marks tests that should run without Django (pure Core tests)",
    "django: marks tests that require Django (integration tests)",
]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pyright]
include = ["src"]
extraPaths = ["src"]
